Revision history for Perl extension XML::Liberal

0.11  2006-05-30 20:19:23 JST
        - Added new Remedy::InvalidEncoding to hack euc-jp/shift_jis
          gaiji mapped to a valid UTF-8 bytes, then reparse with
          encoding="utf-8" header. (Reported by hsbt)
        - Added $XML::Liberall::Debug variable for easy debugging

0.10  2006-05-30 18:02:51 JST
        - Fixed globally_override to work with XML::RSS::LibXML and other tools that calls XML::LibXML::Parser methods.
        - reorgainzed class strucure to make it simpler.

0.09  2006-05-26 17:05:00 JST
        - Added more namespaces. Thanks to drry

0.08  2006-05-26 16:53:00 JST
        - Added globally_override method to override XML::LibXML->new globally

0.07  2006-05-26
        - New remedy UndeclaredNS to rescue undeclared namespaces found in Atom/RSS feeds.

0.06  2006-03-06T06:48:55Z
        - Don't replace & used in X(HT)ML entities

0.05  2006-03-06T05:27:12Z
        - Falls back to UTF-8 explicitly first

0.04  2006-03-06T05:17:08Z
        - Added parse_fh and parse_file

0.03  2006-03-06T01:21:04Z
        - Throw an exception when there's no remedy found


0.02  2006-03-06T01:17:55Z
        - Added EntityRef pattern

0.01  Mon Jan  9 10:23:17 2006
	- original version